@@ -18,6 +18,7 @@ package org.hyperledger.besu.cli.options.unstable;
 import org.hyperledger.besu.cli.options.CLIOptions;
 import org.hyperledger.besu.evm.internal.EvmConfiguration;
 
+import java.util.Arrays;
 import java.util.List;
 
 import picocli.CommandLine;
@@ -50,6 +51,6 @@ public class EvmOptions implements CLIOptions<EvmConfiguration> {
 
   @Override
   public List<String> getCLIOptions() {
-    return List.of(JUMPDEST_CACHE_WEIGHT);
+    return Arrays.asList(JUMPDEST_CACHE_WEIGHT);
   }
 }
